Change detials in title. Add appendixes & bib.

--- a/Pack&Settings/Geometry.tex
+++ b/Pack&Settings/Geometry.tex
@@ -1,4 +1,5 @@
 %本文用于设置页边距
 \usepackage{geometry}
 \geometry{left=3.18cm,right=3.18cm,top=2.54cm,bottom=2.54cm}
-\geometry{headsep=2em,footskip=2em}
+\geometry{headsep=1em,footskip=2em}
+\geometry{headheight=14pt}
