--- a/Pack&Settings/Header&Footer.tex
+++ b/Pack&Settings/Header&Footer.tex
@@ -7,11 +7,20 @@
 \usepackage{fancyhdr}
 \pagestyle{fancy}
 \fancyhf{} %清空原有样式
-
 %设置页眉样式
 \fancyhead[C]{\huawenzhongsong \zihao{5} 华 \space 中 \space 科 \space 技 \space 大 \space 学 \space 毕 \space 业 \space 设 \space 计（论  \space 文）}
-
 %设置页脚样式
 \fancyfoot[C]{\huawenzhongsong \zihao{5} \thepage}
 \fancyfoot[L]{\tikz{\node (A) at (0,0) {}; \draw (0,1pt)--(6.7cm,1pt);}}
 \fancyfoot[R]{\tikz{\node (A) at (0,0) {}; \draw (0,1pt)--(-6.7cm,1pt);}}
+
+%修改原plain格式
+\fancypagestyle{plain}{%
+	\fancyhf{} %清空原有样式
+	%设置页眉样式
+	\fancyhead[C]{\huawenzhongsong \zihao{5} 华 \space 中 \space 科 \space 技 \space 大 \space 学 \space 毕 \space 业 \space 设 \space 计（论  \space 文）}
+	%设置页脚样式
+	\fancyfoot[C]{\huawenzhongsong \zihao{5} \thepage}
+	\fancyfoot[L]{\tikz{\node (A) at (0,0) {}; \draw (0,1pt)--(6.7cm,1pt);}}
+	\fancyfoot[R]{\tikz{\node (A) at (0,0) {}; \draw (0,1pt)--(-6.7cm,1pt);}}
+}
