--- a/Pack&Settings/Paragraph&Section.tex
+++ b/Pack&Settings/Paragraph&Section.tex
@@ -5,14 +5,26 @@
 
 %设置各个标题样式
 %不需要使用part和chapter层级
-\CTEXsetup[format={\clearpage \centering \heiti \bfseries \zihao{-2}}]{section} %节
+\usepackage{titlesec}
+\CTEXsetup[format={\centering \heiti \bfseries \zihao{-2}}]{section} %节
+\newcommand{\sectionbreak}{\clearpage} %小节从新的一页开始
 \CTEXsetup[format={\raggedright \heiti \bfseries \zihao{4}}]{subsection} %小节
 \CTEXsetup[format={\raggedright \heiti \bfseries \zihao{-4}}]{subsubsection} %小小节
 \CTEXsetup[beforeskip={0em}]{paragraph}
 \CTEXsetup[beforeskip={0em}]{subparagraph}
 
+%设置参考文献
+\bibliographystyle{plain}
+\ctexset{bibname={参考文献}}
+
+%设置附录
+\usepackage[title,titletoc]{appendix}
+\renewcommand{\appendixname}{附录}
+
 %重新设置目录
 \usepackage{tocloft}
+\usepackage{hyperref}
+\hypersetup{hidelinks} %去掉目录红框
 \renewcommand{\cfttoctitlefont}{\clearpage \hfill \heiti \zihao{-2} \bfseries}
 \renewcommand{\contentsname}{目\hspace{2em}录}
 \renewcommand{\cftaftertoctitle}{\hfill}
@@ -20,18 +32,19 @@
 \renewcommand{\cftafterloftitleskip}{0.5em}
 \renewcommand{\cftsecdotsep}{\cftdotsep} %设置Section引导点
 \renewcommand{\cftbeforesecskip}{0em} %设置段间距
+\renewcommand{\cftpartfont}{\songti \bfseries}%设置Part字体
 \renewcommand{\cftsecfont}{\songti \bfseries}%设置Section字体
 
+%首行缩进存在问题，暂不使用
+\iffalse
 %设置新的标题层级subsubsubsection
-\usepackage{titlesec}
-\usepackage{hyperref}
 \titleclass{\subsubsubsection}{straight}[\subsection]
 %设置编号
 \newcounter{subsubsubsection}[subsubsection]
 \renewcommand\thesubsubsubsection{\thesubsubsection.\arabic{subsubsubsection}}
 %设置标题样式
 \titleformat{\subsubsubsection}
-{\raggedright \heiti \bfseries \zihao{-4}}{\thesubsubsubsection}{1em}{}
+{\raggedright \heiti \bfseries \zihao{-4}}{\thesubsubsubsection}{1em}{}[]
 \titlespacing*{\subsubsubsection}
 {0pt}{3.25ex plus 1ex minus .2ex}{1.5ex plus .2ex}
 %重新设置段落等级
@@ -46,3 +59,4 @@
 %设置目录深度
 \setcounter{secnumdepth}{4}
 \setcounter{tocdepth}{4}
+\fi
