--- a/Pages/Titlepage.tex
+++ b/Pages/Titlepage.tex
@@ -17,22 +17,22 @@
 		\begin{center}
 			\vspace*{4em}
 			\includegraphics[height=1.61cm]{HUST.png}\\
-			\bigskip
+			\vspace*{2em}
 			{\zihao{-0} \huawenzhongsong \bfseries 本科生毕业设计[论文]}\\
-			\vspace{4em}
+			\vspace{6em}
 			
 			{\zihao{2} \heiti \bfseries \@title}\\
-			\vspace{4em}
+			\vspace{6em}
 			{\zihao{3} \huawenzhongsong 
 				\renewcommand\arraystretch{1.5}
 				\begin{tabular}{lc}
-					\makebox[4em][s]{院系} &
+					\makebox[4em][s]{院 \hfill 系} &
 					\underline{\makebox[#1]{\defschool}} \\
 					\makebox[4em][s]{专业班级} &
 					\underline{\makebox[#1]{\defclassnum}} \\
-					\makebox[4em][s]{姓名} &
+					\makebox[4em][s]{姓 \hfill 名} &
 					\underline{\makebox[#1]{\@author}} \\
-					\makebox[4em][s]{学号} &
+					\makebox[4em][s]{学 \hfill 号} &
 					\underline{\makebox[#1]{\defstunum}} \\
 					\makebox[4em][s]{指导教师} &
 					\underline{\makebox[#1]{\definstructor}} \\
