Change equation style

--- a/Pages/Tableofcontents.tex
+++ b/Pages/Tableofcontents.tex
@@ -31,6 +31,7 @@
 }
 
 %设置新的生成目录命令
+\let \oldtableofcontens \tableofcontents
 \newcommand{\maketoc}[1][nopagenum]{
 	%修改hdr原plain格式
 	\fancypagestyle{plain}{%
