Change title picture

--- a/Pages/Titlepage.tex
+++ b/Pages/Titlepage.tex
@@ -16,7 +16,7 @@
 	\begin{titlepage}
 		\begin{center}
 			\vspace*{4em}
-			\includegraphics[height=1.61cm]{HUST.png}\\
+			\includegraphics[height=1.61cm]{HUSTGreen.png}\\
 			\vspace*{2em}
 			{\zihao{-0} \huawenzhongsong \bfseries 本科生毕业设计[论文]}\\
 			\vspace{6em}
