Change floder arragement. Make class file.

--- a/Old document/Pack&Settings/Header&Footer.tex
+++ b/Old document/Pack&Settings/Header&Footer.tex
@@ -1,10 +1,8 @@
 %本文用于生成页眉页脚
 
-%用于绘制页脚横线
-\usepackage{tikz}
-
 %使用fancyhdr库
 \usepackage{fancyhdr}
+\usepackage{tikz}%用于绘制页脚横线
 %设置页眉样式
 \newcommand{\headstyle}{
 	\fancyhead[C]{\huawenzhongsong \zihao{5} 华 \space 中 \space 科 \space 技 \space 大 \space 学 \space 毕 \space 业 \space 设 \space 计（论  \space 文）}
