Change item&enum style

--- a/Example/example.tex
+++ b/Example/example.tex
@@ -128,8 +128,30 @@
 		\end{tabularx}
 	\end{generaltab}
 	
-	啦啦啦
+	以上
 	
+	\section{列表的使用}
+	这是一个计数的列表
+	\begin{enumerate}
+		\item 第一项
+			\begin{enumerate}
+				\item 第一项中的第一项
+				\item 第一项中的第二项
+			\end{enumerate}
+		\item 第二项
+		\item 第三项
+	\end{enumerate}
+
+	这是一个不计数的列表
+	\begin{itemize}
+		\item 第一项
+		\begin{itemize}
+			\item 第一项中的第一项
+			\item 第一项中的第二项
+		\end{itemize}
+		\item 第二项
+		\item 第三项
+	\end{itemize}
 	
 	\section{测试多页目录的效果}
 	wtf
