--- a/Example/example.tex
+++ b/Example/example.tex
@@ -10,6 +10,7 @@
 
 %添加自己要用的其他宏包
 \usepackage{xltxtra}
+
 \begin{document}
 	%生成标题页
 	%如果要改变填写横杠长度，请这样使用：\maketitle[15em]
@@ -49,31 +50,31 @@
 	\pagenumbering{arabic} %正文页码为阿拉伯数字
 	
 	%正文内容从这里开始
-	\section{第一节 The first Section}
+	\section{第一节}
 	这是小四号的正文字体，段间距1.5倍
 	
 	通过空一行实现段落换行，仅仅是回车并不会产生新的段落
+	\par 也可以通过\verb|\par|命令来新起一段
 	\subsection{第一小节}
 	\subsubsection{第一小小节}
 	\subsubsection{第二小小节}
-	\paragraph{段落}段落具体文章在此段落具体文章在此段落具体文章在此段落具体文章在此段落具体文章在此段落具体文章在此段落具体文章在此段落具体文章在此段落具体文章在此
-	\subparagraph{小段落}段落具体文章在此段落具体文章在此段落具体文章在此段落具体文章在此段落具体文章在此段落具体文章在此段落具体文章在此段落具体文章在此
+	\paragraph{段落}这是一个带有顶头标签的段落这是一个带有顶头标签的段落这是一个带有顶头标签的段落这是一个带有顶头标签的段落这是一个带有顶头标签的段落这是一个带有顶头标签的段落这是一个带有顶头标签的段落
+	\subparagraph{小段落}只是一个带有缩进标签的段落只是一个带有缩进标签的段落只是一个带有缩进标签的段落只是一个带有缩进标签的段落只是一个带有缩进标签的段落只是一个带有缩进标签的段落只是一个带有缩进标签的段落
 	\subsection{第二小节}
 	这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字这是一大段文字
-	\section{第二节}
+	\section{新的大节}
 	新的大节会自动出现在新的一页上
-	
-	请注意目录和参考文献的编译过程
-	\section{第三节}
+	\section{引用参考文献}
 	这是一个引用的范例\cite{Stone_1998}
 	
 	这样可以添加一个不标注的引用\nocite{9787508342894}
 	
 	这样可以添加所有bib文件中的参考文献\nocite{*}
 	
+	\section{公式这么用}
 	在文中引用公式可以这么写：$a^2+b^2=c^2$这是勾股定理，他还可以表示为$c=\sqrt{a^2+b^2}$，还可以让公式单独一段并且加上编号
 	\begin{equation}
-	sin^2{\theta}+cos^2{\theta}=1 \label{eq:pingfanghe}
+	\sin^2{\theta}+\cos^2{\theta}=1 \label{eq:pingfanghe}
 	\end{equation}
 	还可以通过添加标签在正文中引用公式，如等式~\eqref{eq:pingfanghe}或者\autoref{eq:pingfanghe}。我们还可以轻松打出一个矩阵
 	\begin{equation}
@@ -97,7 +98,7 @@
 	
 	\section{用图和表的示例}
 	\subsection{图的使用}
-	\XeLaTeX 环境下可以使用EPS、PDF、PNG、JPEG、BMP格式的图片，当然也可以用绘图包直接在\LaTeX 中绘制图形，推荐使用宏包tikz。图的环境是figure但figure环境使用复杂，因此本模板定义了一个通用版本的figure，该环境会将figure内的图片居中并设置标签与引用名，同时会让图片位置设置为所有可行位置（htbp，即此处、页顶、页底、独立一页），此选项可以作为可选参数设置。
+	\XeLaTeX 环境下可以使用EPS、PDF、PNG、JPEG、BMP格式的图片，当然也可以用绘图包直接在\LaTeX 中绘制图形，推荐使用宏包tikz。图的环境是figure，但figure环境使用复杂且不自带标题，因此本模板定义了一个通用版本的generalfig，该环境会将figure内的图片居中并设置标签与引用名，同时会让图片位置设置为所有可行位置（htbp，即此处、页顶、页底、独立一页），此选项可以作为可选参数设置。
 	
 	其使用方法如下：
 	
@@ -110,9 +111,9 @@
 	\newpage
 	
 	\subsection{表的使用}
-	建议使用三线表
-	定义了新的做中有
-	使用tabularx方便做表
+	作为论文，推荐使用三线表进行排版。所谓三线表，即在标题前有横线，标题后有横线，表格最后还有横线，其他地方无线。当然这不是死规定，也可以根据需要在合适的地方加线。
+	
+	本文定义了新的可变长度左中右（LCR）格式，LCR三个格式会根据表格宽度的设定自行控制宽度，且其宽度相等，方便设置和页面相同宽度的表格。但该功能需要使用tabularx做表。
 	\begin{generaltab}{某校学生升高体重样本}{tab:heightweight}
 		\begin{tabularx}{\textwidth}{lCCC}
 			\toprule
@@ -128,7 +129,7 @@
 		\end{tabularx}
 	\end{generaltab}
 	
-	\autoref{tab:heightweight}，以上
+	当然你也可以引用表格，就像这样：\autoref{tab:heightweight}
 	
 	\section{列表的使用}
 	这是一个计数的列表
@@ -152,27 +153,6 @@
 		\item 第二项
 		\item 第三项
 	\end{itemize}
-	
-	\section{测试多页目录的效果}
-	wtf
-	\subsection{测试多页目录的效果}
-	\subsection{测试多页目录的效果}
-	\subsection{测试多页目录的效果}
-	\subsection{测试多页目录的效果}
-	\subsection{测试多页目录的效果}
-	\subsection{测试多页目录的效果}
-	\subsection{测试多页目录的效果}
-	abc
-	\section{测试多页目录的效果}
-	\subsection{测试多页目录的效果}
-	\subsection{测试多页目录的效果}
-	\subsection{测试多页目录的效果}
-	\subsection{测试多页目录的效果}
-	\subsection{测试多页目录的效果}
-	\subsection{测试多页目录的效果}
-	\subsection{测试多页目录的效果}
-	\subsection{测试多页目录的效果}
-	whatever
 	
 	\begin{thankpage}
 		感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师感谢老师
