Rewrite instruction on fonts.

--- a/Instruction/mybib.bib
+++ b/Instruction/mybib.bib
@@ -9,4 +9,12 @@
   url       = {https://www.amazon.com/Getting-Started-LaTeX-x5165-x95E8/dp/B00D1APK0G%3FSubscriptionId%3D0JYN1NVW651KCA56C102%26tag%3Dtechkie-20%26linkCode%3Dxm2%26camp%3D2025%26creative%3D165953%26creativeASIN%3DB00D1APK0G},
 }
 
+@Misc{ctexdoc,
+  author = {CTEX.ORG},
+  title  = {CTEX 宏集手册},
+  month  = feb,
+  year   = {2017},
+  url    = {http://www.ctex.org/HomePage},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
