Start biblography style

--- a/Example/Bibs/mybib.bib
+++ b/Example/Bibs/mybib.bib
@@ -1,7 +1,7 @@
 % Encoding: UTF-8
 
 @Article{huagongrenzheng2014,
-  author  = {王静康,张凤宝,夏淑倩等},
+  author  = {王静康 and 张凤宝 and 夏淑倩 and 其他作者},
   title   = {论化工本科专业国际认证与国内认证的“实质性”},
   journal = {高等工程教育研究},
   year    = {2014},
