--- a/Instruction/mybib.bib
+++ b/Instruction/mybib.bib
@@ -17,4 +17,12 @@
   url    = {http://www.ctex.org/HomePage},
 }
 
+@Misc{nanda,
+  author = {胡海星},
+  title  = {南京大学学位论文XeLaTeX模板},
+  year   = {2016},
+  note   = {https://raw.github.com/Haixing-Hu/nju-thesis/master/manual/njuthesis-manual.pdf},
+  url    = {https://raw.github.com/Haixing-Hu/nju-thesis/master/manual/njuthesis-manual.pdf},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
