--- a/Example/Bibs/mybib.bib
+++ b/Example/Bibs/mybib.bib
@@ -1,12 +1,13 @@
 % Encoding: UTF-8
 
 @Article{huagongrenzheng2014,
-  author  = {王静康 and 张凤宝 and 夏淑倩 and 其他作者},
-  title   = {论化工本科专业国际认证与国内认证的“实质性”},
-  journal = {高等工程教育研究},
-  year    = {2014},
-  volume  = {5},
-  pages   = {1-4},
+  author   = {王静康 and 张凤宝 and 夏淑倩 and others},
+  title    = {论化工本科专业国际认证与国内认证的“实质性”},
+  journal  = {高等工程教育研究},
+  year     = {2014},
+  volume   = {5},
+  pages    = {1-4},
+  language = {zh},
 }
 
 @Article{Stone_1998,
@@ -18,17 +19,19 @@
   number    = {4},
   pages     = {220--232},
   month     = {oct},
-  doi       = {10.1016/s0141-6359(98)00016-6},
   publisher = {Elsevier {BV}},
 }
 
 @Book{9787508342894,
-  title     = {Dreamweaver 8 perfect web design: ASP dynamic web design articles(Chinese Edition)},
-  publisher = {China Electric Power Press},
-  year      = {2000},
-  author    = {ZHU YIN HONG . XIONG LI RONG},
+  title     = {Dreamweaver完美网页设计——技术入门篇},
+  publisher = {中国电力出版社},
+  year      = {2006},
+  author    = {朱印红 and 袁衍明},
+  address   = {北京},
+  edition   = {第一版},
   isbn      = {9787508342894},
-  url       = {https://www.amazon.com/Dreamweaver-perfect-web-design-articles/dp/7508342895%3FSubscriptionId%3D0JYN1NVW651KCA56C102%26tag%3Dtechkie-20%26linkCode%3Dxm2%26camp%3D2025%26creative%3D165953%26creativeASIN%3D7508342895},
+  language  = {ch},
+  pages     = {19-20},
 }
 
 @Book{9780124467422,
@@ -39,8 +42,16 @@
   isbn      = {0124467423},
   date      = {1997-09-01},
   ean       = {9780124467422},
+  pages     = {1-2},
   pagetotal = {591},
-  url       = {http://www.ebook.de/de/product/4429506/physics_and_chemistry_of_the_solar_system_revised_edition.html},
+}
+
+@Online{bamboosilk,
+  author    = {陈剑},
+  title     = {上博简《民之父母》“而得既塞於四海矣”句解释},
+  citedate  = {2003-01-18},
+  publisher = {简帛研究网站},
+  url       = {http://www.bamboosilk.org/Wssf/2003/chenjian03.htm},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
