--- a/Release/Example/example.tex
+++ b/Release/Example/example.tex
@@ -65,7 +65,7 @@
 	\section{新的大节}
 	新的大节会自动出现在新的一页上
 	\section{引用参考文献}
-	这是一个引用的范例\cite{Stone_1998}
+	这是一个引用的范例\cite{Stone_1998}；
 	
 	这样可以添加一个不标注的引用\nocite{9787508342894}
 	
