--- a/Instruction/使用说明.tex
+++ b/Instruction/使用说明.tex
@@ -140,6 +140,9 @@
 	\end{verbatim}
 	
 	\section{其他常用环境}
+	\subsection{加粗和斜体}
+	todo
+	
 	\subsection{图片环境}
 	本模板保留了原来的图片环境figure的同时，添加了一个generalfig环境，方便添加居中的，带有标题的图片。其使用方法如下：
 	\begin{verbatim}
